--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Anis Express</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </nav>
     <h1>Learning Git</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae veniam
@@ -33,10 +40,7 @@
     </p>
     <p>192 Sheringham Avenue, London.</p>
     <footer>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem,
-        recusandae.
-      </p>
+      <p>This is a footer</p>
     </footer>
   </body>
 </html>
