product feature is added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       </ul>
     </nav>
     <h1>Learning Git</h1>
+    <div class="feature">
+      This is a product card where product info will be shown
+    </div>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae veniam
       iure numquam doloremque perspiciatis fugit sunt tenetur officia
