--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <li><a href="">Home</a></li>
         <li><a href="">About</a></li>
         <li><a href="">Contact</a></li>
-         <li><a href="">Gallery</a></li>
+        <li><a href="">Gallery</a></li>
+        <li><a href="">Video</a></li>
       </ul>
     </nav>
     <h1>Learning Git</h1>
