--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="">Contact</a></li>
         <li><a href="">Gallery</a></li>
         <li><a href="">Video</a></li>
+        <li><a href="">Audio</a></li>
       </ul>
     </nav>
     <h1>Learning Git</h1>
