--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
       <ul>
         <li><a href="">Home</a></li>
+         <li><a href="">Cart</a></li>
         <li><a href="">About</a></li>
         <li><a href="">Contact</a></li>
         <li><a href="">Gallery</a></li>
