--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="">Gallery</a></li>
         <li><a href="">Video</a></li>
         <li><a href="">Audio</a></li>
+        <li><a href="">Payment</a></li>
       </ul>
     </nav>
     <h1>Learning Git</h1>
