--- a/product.html
+++ b/product.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <h1>Product page</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque itaque
+      libero aut perferendis voluptate placeat harum illo nemo quisquam
+      necessitatibus!
+    </p>
   </body>
 </html>
